feat(data-structure)!: 生产化树与链表能力
- 增加树节点重复 ID、孤儿节点和非法拓扑校验
- 新增孤儿节点显式提升为根的构建策略
- 将树遍历和统计改为非递归身份安全实现
- 增加单向链表连接与遍历防环能力
- 统一维护双向链表前驱和后继关系
- 将链表节点调整为对象身份相等语义
- 补充稳定错误码、关键测试和迁移文档